adds GetCurrentGames to API and fixes swagger docs
