# server/docs/swagger.json
@@ -1,6 +1,21 @@
 {
     "components": {
         "schemas": {
+            "game.ActiveGameDTO": {
+                "properties": {
+                    "id": {
+                        "type": "string"
+                    },
+                    "player_ids": {
+                        "items": {
+                            "type": "string"
+                        },
+                        "type": "array",
+                        "uniqueItems": false
+                    }
+                },
+                "type": "object"
+            },
             "game.CardDTO": {
                 "description": "a card",
                 "properties": {
@@ -333,6 +348,28 @@
     },
     "paths": {
         "/game": {
+            "get": {
+                "description": "gets all games that are currently being played",
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": {
+                                        "$ref": "#/components/schemas/game.ActiveGameDTO"
+                                    },
+                                    "type": "array"
+                                }
+                            }
+                        },
+                        "description": "OK"
+                    }
+                },
+                "summary": "Gets Active Games",
+                "tags": [
+                    "Game"
+                ]
+            },
             "post": {
                 "description": "creates a new game from a configuration file",
                 "requestBody": {
@@ -556,15 +593,6 @@
                         }
                     }
                 ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
                 "responses": {
                     "200": {
                         "content": {
@@ -689,15 +717,6 @@
                         }
                     }
                 ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
                 "responses": {
                     "200": {
                         "content": {
